Archive2/4d/54a4da9dee1596/output
main.cpp:1:1: error: 'Point' does not name a type
 Point* x = p.cons[i];
 ^
main.cpp:2:1: error: expected unqualified-id before 'if'
 if(i != linkNum)
 ^
