Archive2/4d/54a4da9dee1596/main.cpp
Point* x = p.cons[i];
if(i != linkNum)
    to_visit.push(x);